[gd_scene load_steps=4 format=3 uid="uid://c8m7pk5xvr3l0"]

[ext_resource type="Script" uid="uid://c81y731tpy7pp" path="res://scripts/customer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://5eeohonkr6bu" path="res://textures/hillybilly.glb" id="2_bov33"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wpj86"]
albedo_color = Color(0, 0, 0, 1)

[node name="Customer" type="Node3D"]
script = ExtResource("1")

[node name="PatienceBar3D" type="SubViewportContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -122.695
offset_right = 50.0
offset_bottom = -102.695
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="PatienceBar3D"]
handle_input_locally = false
size = Vector2i(100, 20)
render_target_update_mode = 4

[node name="PatienceBar" type="ProgressBar" parent="PatienceBar3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="MeshInstance3D" parent="." instance=ExtResource("2_bov33")]
transform = Transform3D(-0.187354, 0, 0.764953, 0, 0.8, 0, -0.611963, 0, -0.234191, 2.60676, 1.32559, -2.65624)

[node name="Object_34" parent="MeshInstance3D/metarig/Skeleton3D" index="0"]
transform = Transform3D(0.617351, 0, 1.50316, 0, 1.625, 0, -1.50316, 0, 0.617351, -3.11919, -1.95172, -4.91015)
surface_material_override/0 = SubResource("StandardMaterial3D_wpj86")

[node name="OmniLight3D" type="OmniLight3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.62467, 0.971292, -3.92915)
light_color = Color(1, 0, 0, 1)
light_energy = 16.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 16.0
omni_range = 0.046
omni_attenuation = 3.185

[node name="OmniLight3D2" type="OmniLight3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.57837, 0.971292, -4.0372)
light_color = Color(1, 0, 0, 1)
light_energy = 16.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 16.0
omni_range = 0.046
omni_attenuation = 3.185

[editable path="MeshInstance3D"]
